fix: center align category text in slideshow module

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -57,6 +57,7 @@ p.logo{
 }
 
 p.category {
+    text-align: center;
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 1.2rem;
     text-transform: uppercase;
